# generic-GPU-project

./: CMakeLists.txt  README.md
include/: communicator_quda.h  examples.h  instantiate.h  kernel_helper.h  quda.h  quda_define.h.in  quda_internal.h  random_quda.h  tunable_nd.h  tunable_reduction.h
include/kernels/: scale_vector.cuh
include/targets/cuda/: tunable_kernel.h
lib/: CMakeLists.txt  check_params.h  communicator_stack.cpp  interface_quda.cpp  scale_vector.cu
lib/targets/cuda/: malloc.cpp
tests/: CMakeLists.txt  blas_interface_test.cpp  scale_vector_example.cpp  test.h
tests/host_reference/: CMakeLists.txt  blas_reference.cpp
tests/utils/: CMakeLists.txt  command_line_params.cpp  command_line_params.h  host_utils.cpp  host_utils.h  misc.h
